Update Aufgabe MALIS 21.3 WPM_T9.2

--- a/Aufgabe MALIS 21.3 WPM_T9.2
+++ b/Aufgabe MALIS 21.3 WPM_T9.2
@@ -1,1 +1,3 @@
 Aufgabe MALIS 21.3 WPM_T9.2
+Aufgabenstellung: Lösen Sie ein Problem aus ihrem beruflichen Alltag in dem Daten analysiert oder Prozesse automatisiert werden können mittels Python als Script oder in einem Jupyter Notebook. Hierzu verfassen Sie hierzu zunächst bitte ein kurzes Exposé (400 – 600 Wörter) in ihrem Repositorium auf GitHub und holen sich die Bestätigung beim Dozenten ein.
+
