Update Aufgabe MALIS 21.3 WPM_T9.2

--- a/Aufgabe MALIS 21.3 WPM_T9.2
+++ b/Aufgabe MALIS 21.3 WPM_T9.2
@@ -1,3 +1,7 @@
 Aufgabe MALIS 21.3 WPM_T9.2
-Aufgabenstellung: Lösen Sie ein Problem aus ihrem beruflichen Alltag in dem Daten analysiert oder Prozesse automatisiert werden können mittels Python als Script oder in einem Jupyter Notebook. Hierzu verfassen Sie hierzu zunächst bitte ein kurzes Exposé (400 – 600 Wörter) in ihrem Repositorium auf GitHub und holen sich die Bestätigung beim Dozenten ein.
+Aufgabenstellung: Lösen Sie ein Problem aus ihrem beruflichen Alltag in dem Daten analysiert oder Prozesse automatisiert werden können mittels Python als Script oder in einem Jupyter Notebook. Hierzu verfassen Sie zunächst bitte ein kurzes Exposé (400 – 600 Wörter) in ihrem Repositorium auf GitHub und holen sich die Bestätigung beim Dozenten ein.
 
+Probleme:
+- E-Mail-Adressen der Nutzer:innen (schwierig, weil es um persönliche Daten geht und ich nicht sicher weiß, inwiefern diese exportiert usw. werden dürfen)
+- Statistik für einzelne Systematikstellen der ASB (wird bei uns derzeit mit Excel gelöst, nur das letzte Anschaffungsjahr kann nicht automatisch ausgegeben werden, sondern danach muss recherchiert werden. Das könnte mit einem Jupyter Notebook evtl. gelöst werden. Die Daten ansich müssten allerdings immernoch per Hand aus der Bibliotheca-Datenbank exportiert werden, weil das Programm keinen Zugriff auf die Datenbank ermöglicht. Immerhin wären dann mehrere Arbeitsschritte auf einen reduziert.)
+- Unser Onlinekatalog kann nicht gleichzeitig nach Umlauten und ihren Umschreibungen suchen ("Dürrenmatt" erzielt andere Ergebnisse als "Duerrenmatt"). Allerdings ist hier genau das gleiche Problem, dass die Firma keine Möglichkeit bietet, in ihre Programmierung einzugreifen.
