--- a/Aufgabe MALIS 21.3 WPM_T9.2
+++ b/Aufgabe MALIS 21.3 WPM_T9.2
@@ -10,4 +10,4 @@ Aufgabenstellung: Lösen Sie ein Problem aus ihrem beruflichen Alltag in dem Dat
 Eins meiner Lektorate umfasst die Sachgruppe O (Allgemeine Systematik für öffentliche Bibliotheken: Sprache).
 Im ersten Schritt könnte das Statistikmodul des Bibliotheksprogrammes aufgerufen werden. Dort können Einstellungen zum Ausgeben einer bestimmten Statistik vorgenommen werden. Die Daten werden angezeigt und können in einer Exceltabelle ausgegeben werden.
 Dies wird in folgenden Screenshots deutlich:
-![](URL)
+![Screenshots](URL)
