--- a/Aufgabe MALIS 21.3 WPM_T9.2
+++ b/Aufgabe MALIS 21.3 WPM_T9.2
@@ -9,5 +9,6 @@ Aufgabenstellung: Lösen Sie ein Problem aus ihrem beruflichen Alltag in dem Dat
 ##Statistik-Problematik
 Eins meiner Lektorate umfasst die Sachgruppe O (Allgemeine Systematik für öffentliche Bibliotheken: Sprache).
 Im ersten Schritt könnte das Statistikmodul des Bibliotheksprogrammes aufgerufen werden. Dort können Einstellungen zum Ausgeben einer bestimmten Statistik vorgenommen werden. Die Daten werden angezeigt und können in einer Exceltabelle ausgegeben werden.
-Dies wird in folgenden Screenshots deutlich:
-![Screenshots](URL)
+
+Diese Exceltabelle möchte ich in meinem Jupyter Notebook anzeigen und bearbeiten können. Dazu habe ich ein neues Jupyter Notebook über das Terminal gestartet (Befehl: juypter notebook).
+Die erste Eingabe ist "import pandas as pd" und danach "pd.read_excel('Statistik.xlsx')". Da ich die Exceldatei im gleichen Ordner gespeichert habe, muss der Dateipfad nicht mit angegeben werden. Daraufhin wird eine Liste angezeigt.
