Update Aufgabe MALIS 21.3 WPM_T9.2

--- a/Aufgabe MALIS 21.3 WPM_T9.2
+++ b/Aufgabe MALIS 21.3 WPM_T9.2
@@ -10,5 +10,4 @@ Aufgabenstellung: Lösen Sie ein Problem aus ihrem beruflichen Alltag in dem Dat
 Eins meiner Lektorate umfasst die Sachgruppe O (Allgemeine Systematik für öffentliche Bibliotheken: Sprache).
 Im ersten Schritt könnte das Statistikmodul des Bibliotheksprogrammes aufgerufen werden. Dort können Einstellungen zum Ausgeben einer bestimmten Statistik vorgenommen werden. Die Daten werden angezeigt und können in einer Exceltabelle ausgegeben werden.
 
-Diese Exceltabelle möchte ich in meinem Jupyter Notebook anzeigen und bearbeiten können. Dazu habe ich ein neues Jupyter Notebook über das Terminal gestartet (Befehl: juypter notebook).
-Die erste Eingabe ist "import pandas as pd" und danach "pd.read_excel('Statistik.xlsx')". Da ich die Exceldatei im gleichen Ordner gespeichert habe, muss der Dateipfad nicht mit angegeben werden. Daraufhin wird eine Liste angezeigt.
+Diese Exceltabelle möchte ich in meinem Jupyter Notebook anzeigen und bearbeiten können. Dazu habe ich ein neues Jupyter Notebook über das Terminal gestartet (Befehl: juypter notebook). Alle weiteren Schritte sind im hier ebenfalls hochgeladenen Jupyter Notebook kommentiert. Die Fehler wurden nicht gelöscht, weil es transparent macht, wie der Lösungsweg verlaufen ist.
